css changes maybe fix horizontal scroll on mobile

--- a/static/index.css
+++ b/static/index.css
@@ -1,7 +1,10 @@
-html, body {
-  overflow-x: hidden;
-}
+
 body {
+  width: 100%;
+  overflow-x: hidden;
+  position: absolute;
+  top: 0;
+  left: 0;
     margin: 0;
     background-color: #fbfbfb;
 }
